// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component matches snapshot (checked) 1`] = `
<div
  className="fdsCheckable fdsRadio"
>
  <input
    className="media--xs"
    defaultChecked={true}
    id="mock-universal-unique-identifier"
    name="snapshot-radio"
    readOnly={true}
    type="radio"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Radio component matches snapshot (disabled) 1`] = `
<div
  className="fdsCheckable fdsRadio fdsCheckable--disabled"
>
  <input
    className="media--xs"
    id="mock-universal-unique-identifier"
    name="snapshot-radio"
    readOnly={true}
    type="radio"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Radio component matches snapshot 1`] = `
<div
  className="fdsCheckable fdsRadio"
>
  <input
    className="media--xs"
    id="mock-universal-unique-identifier"
    name="snapshot-radio"
    readOnly={true}
    type="radio"
    value="test-value"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <RadioFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <RadioEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;
